syntax = "proto3";

package brymck.risk.v1;

import "brymck/dates/v1/date.proto";

enum Frequency {
    FREQUENCY_INVALID = 0;
    FREQUENCY_DAILY = 1;
    FREQUENCY_MONTHLY = 2;
}

// The risk API
service RiskAPI {
    // Get risk
    rpc GetRisk (GetRiskRequest) returns (GetRiskResponse);

    // Get covariances
    rpc GetCovariances (GetCovariancesRequest) returns (GetCovariancesResponse);

    // Get asset return time series
    rpc GetReturnTimeSeries (GetReturnTimeSeriesRequest) returns (GetReturnTimeSeriesResponse);
}

message GetRiskRequest {
    uint64 securityId = 1;

    Frequency frequency = 2;
}

message GetRiskResponse {
    double risk = 1;
}

message GetCovariancesRequest {
    repeated uint64 securityIds = 1;

    Frequency frequency = 2;
}

message GetCovariancesResponse {
    repeated CovariancePair covariances = 1;
}

message CovariancePair {
    uint64 securityId1 = 1;

    uint64 securityId2 = 2;

    double covariance = 3;
}

message GetReturnTimeSeriesRequest {
    uint64 securityId = 1;

    Frequency frequency = 2;
}

message GetReturnTimeSeriesResponse {
    repeated ReturnTimeSeriesEntry entries = 1;
}

message ReturnTimeSeriesEntry {
    brymck.dates.v1.Date date = 1;

    double return = 2;
}
